--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-native": "0.72.5",
     "react-native-collapsible": "^1.6.1",
     "react-native-paper": "^5.10.6",
