--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/elements": "^1.3.19",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
+    "axios": "^1.6.2",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
